fix pre tag wrapping

--- a/Client/src/Components/Navbar/Navbar.module.css
+++ b/Client/src/Components/Navbar/Navbar.module.css
@@ -18,6 +18,15 @@
   font-weight: bold;
   margin: 0;
 }
+.logo .logo-text {
+  color: #5e5ff5;
+}
+.logo-text .logo-text-int {
+  color: #393839;
+}
+.logo-text .logo-text-el {
+  color: #fe8a01;
+}
 .logo img {
   width: auto;
   height: 100px;
