--- a/Client/src/Pages/Admin/Problems/Problems.module.css
+++ b/Client/src/Pages/Admin/Problems/Problems.module.css
@@ -61,6 +61,15 @@
   text-align: left;
   margin-bottom: 2rem;
   background-color: beige;
+  max-width: 800px;
+}
+
+pre {
+  white-space: pre-wrap;       /* Since CSS 2.1 */
+  white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+  white-space: -pre-wrap;      /* Opera 4-6 */
+  white-space: -o-pre-wrap;    /* Opera 7 */
+  word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
 
 .problem ol {
