--- a/Client/src/Pages/Exam/OngoingExam/OngoingExam.module.css
+++ b/Client/src/Pages/Exam/OngoingExam/OngoingExam.module.css
@@ -276,3 +276,11 @@
   box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.5);
   transition: 0.2s ease-in-out;
 }
+
+pre {
+  white-space: pre-wrap;       /* Since CSS 2.1 */
+  white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+  white-space: -pre-wrap;      /* Opera 4-6 */
+  white-space: -o-pre-wrap;    /* Opera 7 */
+  word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
